nothing to see here

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
                 </ul>
             </nav>
         </div>
+        <div class="header--container">
         <div class="header--block">
             <h1>GIVE THESE 
                 <br/><span>BEARS SOME</span> 
-                <br/><span class="bigLove">BIG LOVE</span></span>
+                <br/><span class="bigLove">BIG LOVE</span>
             </h1>
             <div class="heartContainer">
                 <div class="heart"></div>
@@ -44,6 +45,7 @@
             <img class="stars star4" src="./asset/images/stars.png"/>
             <img class="pilot" src="./asset/images/bear-pilot.png" alt=""/>
         </div>
+    </div>
     </header>
     <body>
         <div class="container1">
