problem of overflow on mobil with chrome solved

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@200;400;500&family=League+Gothic&display=swap" rel="stylesheet"> 
     <link href="styles.css" rel="stylesheet"></link>
-
+    
     <title>Document</title>
 </head>
 
-    <header>
+<body>
+    <div class="container">
         <div class="header--top">
             <img class="logo" src="./asset/images/bear-logo.png" alt="logo"/>
             <nav>
@@ -30,24 +31,23 @@
             </nav>
         </div>
         <div class="header--container">
-        <div class="header--block">
-            <h1>GIVE THESE 
-                <br/><span>BEARS SOME</span> 
-                <br/><span class="bigLove">BIG LOVE</span>
-            </h1>
-            <div class="heartContainer">
-                <div class="heart"></div>
+            <div class="header--block">
+                <h1>GIVE THESE 
+                    <br/><span>BEARS SOME</span> 
+                    <br/><span class="bigLove">BIG LOVE</span>
+                </h1>
+                <div class="heartContainer">
+                    <div class="heart"></div>
+                </div>
+                <button> SHOP EM' ALL</button>
+                <img class="stars star1" src="./asset/images/stars.png"/>
+                <img class="stars star2" src="./asset/images/stars.png"/>
+                <img class="stars star3" src="./asset/images/stars.png"/>
+                <img class="stars star4" src="./asset/images/stars.png"/>
+                <img class="pilot" src="./asset/images/bear-pilot.png" alt=""/>
             </div>
-            <button> SHOP EM' ALL</button>
-            <img class="stars star1" src="./asset/images/stars.png"/>
-            <img class="stars star2" src="./asset/images/stars.png"/>
-            <img class="stars star3" src="./asset/images/stars.png"/>
-            <img class="stars star4" src="./asset/images/stars.png"/>
-            <img class="pilot" src="./asset/images/bear-pilot.png" alt=""/>
         </div>
     </div>
-    </header>
-    <body>
         <div class="container1">
             <div class="block">
                 <img src="./asset/images/bear-usual.png">
