First page css done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="header--top">
             <img class="logo" src="./asset/images/bear-logo.png" alt="logo"/>
             <nav>
-                <p>BIG<br/>CART</p>
+                <p class="cartButton">BIG CART</p>
                 <div class="header__nav">
                     <img src="./asset/images/menu.svg" alt="">
                 </div>
