some bugs that I can take care later

--- a/produit.html
+++ b/produit.html
@@ -34,23 +34,41 @@
         <div class="containerProduit--1">
             <div class="block--1">
                 <p class="meet">MEET</p>
-                <p class="productInfo--Size">SIZE:</p>
-                <p class="productInfo--Values">30X21X16cm<br>1.3kg</p>
+                <div class="productInfo">
+                    <p class="productInfo--Size">SIZE:</p>
+                    <p class="productInfo--Values">30X21X16cm<br>1.3kg</p>
+                </div>
                 <div class="productImage"> 
-                    <img class="stars star1--produit" src="./asset/images/stars.png"/>
-                    <img class="stars star2--produit" src="./asset/images/stars.png"/>
-                    <img class="stars star3--produit" src="./asset/images/stars.png"/>
-                    <img class="stars star4--produit" src="./asset/images/stars.png"/>
                     <img class="pilot pilotProduit" src="./asset/images/bear-pilot.png" alt=""/>
-                    <div class="heartContainer heartProduit">
-                        <div class="heart"></div>
-                        <p>-10%</p>
-                    </div>
                 </div>
             </div>
             <div class="block--2">
-              
+                <h2>NOR<span>BEAR</span></h2>
+                <p>
+                    NorBEAR looks tough on the outside, but he's really soft to the touch. His jacket is made out of recycled fabric. Unlike Tom Cruise, when he falls off something, he doesn't break. So don't worry, hug baby, hug!
+                </p>
+                <p class="productPrice">39,99€</p>
+                <div class="button__addToCart">
+                    <div class="button__addToCart--chooseTheNumber">
+                        <div class="button__addToCart--minus">-</div>
+                        <input class="button__addToCart--number"type="number" min="1" value="1"/>
+                        <div class="button__addToCart--plus">+</div>
+                    </div>
+                    <div class="button__addToCart--btn">
+                        <div>ADD TO CART</div>
+                    </div>
+                    
+                </div>
+                <p class="meet">MEET THE OTHER</p>
             </div>
+        </div>
+        <img class="stars star1--produit" src="./asset/images/stars.png"/>
+        <img class="stars star2--produit" src="./asset/images/stars.png"/>
+        <img class="stars star3--produit" src="./asset/images/stars.png"/>
+        <div class="heartContainer heartProduit">
+            <div class="heart"></div>
+            <img class="stars star4--produit" src="./asset/images/stars.png"/>
+            <p>-10%</p>
         </div>
     </div>
 </body>
