adding the last pictures

--- a/produit.html
+++ b/produit.html
@@ -21,7 +21,7 @@
                 <nav>
                     <p class="cartButton">BIG CART</p>
                     <div class="header__nav header__nav--produit">
-                        <img class="menuSmall" src="./asset/images/vector-menu.png.svg" alt="">
+                        <img class="menuSmall" src="./asset/images/menu.svg" alt="">
                         <img class="menuWide"  src="./asset/images/menu.svg" alt="">
                     </div>
                     <ul>
@@ -42,6 +42,11 @@
                     <img class="stars star1--produit" src="./asset/images/stars.png"/>
                     <img class="stars star2--produit" src="./asset/images/stars.png"/>
                     <img class="stars star3--produit" src="./asset/images/stars.png"/>
+                    <div class="heartContainer heartProduit heartProduitSmall">
+                        <div class="heart"></div>
+                        <img class="stars star4--produit" src="./asset/images/stars.png"/>
+                        <p>-10%</p>
+                    </div>
                     <img class="pilot pilotProduit" src="./asset/images/bear-pilot.png" alt=""/>
                 </div>
             </div>
@@ -66,10 +71,21 @@
             </div>
         </div>
         
-        <div class="heartContainer heartProduit">
+        <div class="heartContainer heartProduit heartProduitWide">
             <div class="heart"></div>
             <img class="stars star4--produit" src="./asset/images/stars.png"/>
             <p>-10%</p>
+        </div>
+    </div>
+    <div class="block--3">
+        <div class="firstProduct">
+            <img src="./asset/images/bear-giant.png">
+        </div>
+        <div class="secondProduct">
+            <img src="./asset/images/ours-seul.png">
+        </div>
+        <div class="thirdProduct">
+            <img src="./asset/images/oursPouf.png">
         </div>
     </div>
 </body>
