--- a/produit.html
+++ b/produit.html
@@ -67,7 +67,7 @@
                     </div>
                     
                 </div>
-                <p class="meet">MEET THE OTHER</p>
+                <p class="meet">MEET THE OTHERS</p>
             </div>
         </div>
         
