--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                 <div class="container2__block--2--1">
                     <div class="animationGo">
                         <div class="heart--white__1">
+                            <a href="produit.html">
                             <div class="heart--white"></div>
                             <p>GO!</p>
+                            </a>
                         </div>
                     </div>
                     <img class="productBear" src="asset/images/ours-seul.png"/>
